--- a/interface.ui
+++ b/interface.ui
@@ -1586,8 +1586,8 @@
      <widget class="QLabel" name="settings_ip_label">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>170</y>
+        <x>600</x>
+        <y>80</y>
         <width>111</width>
         <height>20</height>
        </rect>
@@ -1602,8 +1602,8 @@
      <widget class="QLineEdit" name="settings_ip_text">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>170</y>
+        <x>720</x>
+        <y>80</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -1612,8 +1612,8 @@
      <widget class="QLabel" name="settings_invisman_username_label">
       <property name="geometry">
        <rect>
-        <x>106</x>
-        <y>210</y>
+        <x>596</x>
+        <y>120</y>
         <width>111</width>
         <height>20</height>
        </rect>
@@ -1628,8 +1628,8 @@
      <widget class="QLineEdit" name="settings_invisman_username_text">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>210</y>
+        <x>720</x>
+        <y>120</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -1638,8 +1638,8 @@
      <widget class="QLabel" name="settings_ssh_file_label">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>250</y>
+        <x>640</x>
+        <y>160</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -1654,8 +1654,8 @@
      <widget class="QLineEdit" name="settings_ssh_file_text">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>250</y>
+        <x>720</x>
+        <y>160</y>
         <width>221</width>
         <height>20</height>
        </rect>
@@ -1664,14 +1664,40 @@
      <widget class="QPushButton" name="setting_ssh_file_dialog_button">
       <property name="geometry">
        <rect>
-        <x>450</x>
-        <y>250</y>
+        <x>940</x>
+        <y>160</y>
         <width>21</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
        <string>...</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="settings_switch_to_main_on_insert_checkbox">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>180</y>
+        <width>21</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="settings_switch_to_main_on_insert_label">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>180</y>
+        <width>141</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Auto-switch to main on insert</string>
       </property>
      </widget>
     </widget>
