--- a/gui/styles/dark.qss
+++ b/gui/styles/dark.qss
@@ -48,6 +48,11 @@ QFrame#reports_export_frame {
 	border-radius: 15px;
 }
 
+QFrame#reports_utilities_frame {
+	border: 1px solid white;
+	border-radius: 15px;
+}
+
 QFrame[frameShape="4"] {
 	border: 1px solid white;
 }
