--- a/interface.ui
+++ b/interface.ui
@@ -431,6 +431,19 @@
                  <string>Asigned To</string>
                 </property>
                </widget>
+               <widget class="QCheckBox" name="checkbox_is_local">
+                <property name="geometry">
+                 <rect>
+                  <x>590</x>
+                  <y>30</y>
+                  <width>71</width>
+                  <height>16</height>
+                 </rect>
+                </property>
+                <property name="text">
+                 <string>Is Local</string>
+                </property>
+               </widget>
               </widget>
              </item>
             </layout>
@@ -439,8 +452,8 @@
             <widget class="QPushButton" name="insert_clear_selections_button">
              <property name="geometry">
               <rect>
-               <x>1070</x>
-               <y>600</y>
+               <x>1030</x>
+               <y>610</y>
                <width>75</width>
                <height>23</height>
               </rect>
@@ -1028,6 +1041,44 @@
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
+            <widget class="QLabel" name="insert_is_local_label">
+             <property name="geometry">
+              <rect>
+               <x>50</x>
+               <y>560</y>
+               <width>81</width>
+               <height>20</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <weight>75</weight>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="layoutDirection">
+              <enum>Qt::LeftToRight</enum>
+             </property>
+             <property name="text">
+              <string>Local Account</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+            <widget class="QCheckBox" name="insert_is_local_checkbox">
+             <property name="geometry">
+              <rect>
+               <x>140</x>
+               <y>563</y>
+               <width>16</width>
+               <height>17</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
            </widget>
            <widget class="QWidget" name="stacked_analytics">
             <widget class="QFrame" name="analytics_graph_top">
@@ -1549,10 +1600,10 @@
              <widget class="QFrame" name="frame_9">
               <property name="geometry">
                <rect>
-                <x>10</x>
-                <y>410</y>
-                <width>341</width>
-                <height>2</height>
+                <x>0</x>
+                <y>406</y>
+                <width>351</width>
+                <height>1</height>
                </rect>
               </property>
               <property name="frameShape">
@@ -1593,6 +1644,58 @@
                 <width>61</width>
                 <height>22</height>
                </rect>
+              </property>
+             </widget>
+             <widget class="QRadioButton" name="reports_export_export_date_radio">
+              <property name="geometry">
+               <rect>
+                <x>20</x>
+                <y>420</y>
+                <width>101</width>
+                <height>16</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Export by date</string>
+              </property>
+             </widget>
+             <widget class="QDateEdit" name="reports_export_by_date_from">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>440</y>
+                <width>110</width>
+                <height>22</height>
+               </rect>
+              </property>
+              <property name="calendarPopup">
+               <bool>true</bool>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_16">
+              <property name="geometry">
+               <rect>
+                <x>130</x>
+                <y>440</y>
+                <width>51</width>
+                <height>21</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Until</string>
+              </property>
+             </widget>
+             <widget class="QDateEdit" name="reports_export_by_date_until">
+              <property name="geometry">
+               <rect>
+                <x>170</x>
+                <y>440</y>
+                <width>110</width>
+                <height>22</height>
+               </rect>
+              </property>
+              <property name="calendarPopup">
+               <bool>true</bool>
               </property>
              </widget>
             </widget>
@@ -1697,7 +1800,7 @@
                </rect>
               </property>
              </widget>
-             <widget class="QLabel" name="label_16">
+             <widget class="QLabel" name="reports_utilities_ip_site_comparison">
               <property name="geometry">
                <rect>
                 <x>10</x>
@@ -1707,10 +1810,10 @@
                </rect>
               </property>
               <property name="text">
-               <string>Bitdefender Comparison</string>
+               <string>IP/Site Comparison</string>
               </property>
              </widget>
-             <widget class="QPushButton" name="reports_utilities_compare_bitdefender_file_dialog_2">
+             <widget class="QPushButton" name="reports_utilities_compare_ip_site_dialog">
               <property name="geometry">
                <rect>
                 <x>310</x>
@@ -1723,7 +1826,7 @@
                <string>..</string>
               </property>
              </widget>
-             <widget class="QLineEdit" name="reports_utilities_bitdefender_comparison_path">
+             <widget class="QLineEdit" name="reports_utilities_ip_site__comparison_path">
               <property name="geometry">
                <rect>
                 <x>150</x>
