--- a/interface.ui
+++ b/interface.ui
@@ -153,7 +153,7 @@
             </sizepolicy>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>2</number>
            </property>
            <widget class="QWidget" name="stacked_view_db_page">
             <property name="sizePolicy">
@@ -285,7 +285,7 @@
                  </rect>
                 </property>
                 <property name="text">
-                 <string>Name</string>
+                 <string>Device Name</string>
                 </property>
                </widget>
                <widget class="QCheckBox" name="checkbox_model">
@@ -894,10 +894,10 @@
             <widget class="QLabel" name="insert_name_label">
              <property name="geometry">
               <rect>
-               <x>80</x>
+               <x>46</x>
                <y>310</y>
-               <width>47</width>
-               <height>13</height>
+               <width>81</width>
+               <height>20</height>
               </rect>
              </property>
              <property name="font">
@@ -910,7 +910,7 @@
               <enum>Qt::LeftToRight</enum>
              </property>
              <property name="text">
-              <string>Name</string>
+              <string>Device Name</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1452,7 +1452,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>120</y>
+                <y>130</y>
                 <width>341</width>
                 <height>2</height>
                </rect>
@@ -1480,21 +1480,11 @@
                <enum>QFrame::Raised</enum>
               </property>
              </widget>
-             <widget class="QComboBox" name="reports_export_export_due_replacement_combo">
-              <property name="geometry">
-               <rect>
-                <x>200</x>
-                <y>230</y>
-                <width>91</width>
-                <height>22</height>
-               </rect>
-              </property>
-             </widget>
              <widget class="QFrame" name="frame_5">
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>320</y>
+                <y>250</y>
                 <width>341</width>
                 <height>2</height>
                </rect>
@@ -1510,7 +1500,7 @@
               <property name="geometry">
                <rect>
                 <x>200</x>
-                <y>300</y>
+                <y>210</y>
                 <width>91</width>
                 <height>22</height>
                </rect>
@@ -1526,7 +1516,7 @@
                </rect>
               </property>
               <property name="text">
-               <string>Export Active Assets</string>
+               <string>Export active assets</string>
               </property>
              </widget>
              <widget class="QRadioButton" name="reports_export_export_retired_radio">
@@ -1539,40 +1529,27 @@
                </rect>
               </property>
               <property name="text">
-               <string>Export Retired Assets</string>
-              </property>
-             </widget>
-             <widget class="QRadioButton" name="reports_export_export_due_replacement_radio">
-              <property name="geometry">
-               <rect>
-                <x>20</x>
-                <y>220</y>
-                <width>171</width>
-                <height>17</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>Assets Due For Replacement</string>
+               <string>Export retired assets</string>
               </property>
              </widget>
              <widget class="QRadioButton" name="reports_export_export_location_radio">
               <property name="geometry">
                <rect>
                 <x>20</x>
-                <y>300</y>
+                <y>210</y>
                 <width>161</width>
                 <height>17</height>
                </rect>
               </property>
               <property name="text">
-               <string>Export active By Location</string>
+               <string>Export active By location</string>
               </property>
              </widget>
              <widget class="QFrame" name="frame_8">
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>350</y>
+                <y>320</y>
                 <width>341</width>
                 <height>2</height>
                </rect>
@@ -1587,21 +1564,21 @@
              <widget class="QCheckBox" name="reports_export_include_overdue_checkbox">
               <property name="geometry">
                <rect>
-                <x>200</x>
-                <y>200</y>
+                <x>10</x>
+                <y>390</y>
                 <width>141</width>
                 <height>21</height>
                </rect>
               </property>
               <property name="text">
-               <string>Include Overdue Assets</string>
+               <string>Include overdue assets</string>
               </property>
              </widget>
              <widget class="QFrame" name="frame_9">
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>406</y>
+                <y>480</y>
                 <width>351</width>
                 <height>1</height>
                </rect>
@@ -1617,7 +1594,7 @@
               <property name="geometry">
                <rect>
                 <x>20</x>
-                <y>370</y>
+                <y>270</y>
                 <width>161</width>
                 <height>21</height>
                </rect>
@@ -1629,9 +1606,9 @@
              <widget class="QComboBox" name="reports_export_export_changed_combo">
               <property name="geometry">
                <rect>
-                <x>190</x>
-                <y>370</y>
-                <width>69</width>
+                <x>188</x>
+                <y>290</y>
+                <width>81</width>
                 <height>22</height>
                </rect>
               </property>
@@ -1639,8 +1616,8 @@
              <widget class="QSpinBox" name="report_export_export_changed_spinbox">
               <property name="geometry">
                <rect>
-                <x>270</x>
-                <y>370</y>
+                <x>280</x>
+                <y>290</y>
                 <width>61</width>
                 <height>22</height>
                </rect>
@@ -1650,20 +1627,20 @@
               <property name="geometry">
                <rect>
                 <x>20</x>
-                <y>420</y>
-                <width>101</width>
+                <y>330</y>
+                <width>131</width>
                 <height>16</height>
                </rect>
               </property>
               <property name="text">
-               <string>Export by date</string>
+               <string>Due for replacement</string>
               </property>
              </widget>
              <widget class="QDateEdit" name="reports_export_by_date_from">
               <property name="geometry">
                <rect>
                 <x>10</x>
-                <y>440</y>
+                <y>360</y>
                 <width>110</width>
                 <height>22</height>
                </rect>
@@ -1676,7 +1653,7 @@
               <property name="geometry">
                <rect>
                 <x>130</x>
-                <y>440</y>
+                <y>360</y>
                 <width>51</width>
                 <height>21</height>
                </rect>
@@ -1689,13 +1666,26 @@
               <property name="geometry">
                <rect>
                 <x>170</x>
-                <y>440</y>
+                <y>360</y>
                 <width>110</width>
                 <height>22</height>
                </rect>
               </property>
               <property name="calendarPopup">
                <bool>true</bool>
+              </property>
+             </widget>
+             <widget class="QCheckBox" name="checkBox">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>420</y>
+                <width>221</width>
+                <height>17</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Include unknown replacement date</string>
               </property>
              </widget>
             </widget>
