--- a/interface.ui
+++ b/interface.ui
@@ -153,7 +153,7 @@
             </sizepolicy>
            </property>
            <property name="currentIndex">
-            <number>2</number>
+            <number>0</number>
            </property>
            <widget class="QWidget" name="stacked_view_db_page">
             <property name="sizePolicy">
@@ -1564,7 +1564,7 @@
              <widget class="QCheckBox" name="reports_export_include_overdue_checkbox">
               <property name="geometry">
                <rect>
-                <x>10</x>
+                <x>90</x>
                 <y>390</y>
                 <width>141</width>
                 <height>21</height>
@@ -1578,7 +1578,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>480</y>
+                <y>450</y>
                 <width>351</width>
                 <height>1</height>
                </rect>
@@ -1678,7 +1678,7 @@
              <widget class="QCheckBox" name="checkBox">
               <property name="geometry">
                <rect>
-                <x>10</x>
+                <x>90</x>
                 <y>420</y>
                 <width>221</width>
                 <height>17</height>
@@ -1686,6 +1686,19 @@
               </property>
               <property name="text">
                <string>Include unknown replacement date</string>
+              </property>
+             </widget>
+             <widget class="QRadioButton" name="reports_export_all_radio">
+              <property name="geometry">
+               <rect>
+                <x>20</x>
+                <y>470</y>
+                <width>121</width>
+                <height>17</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Export All (backup)</string>
               </property>
              </widget>
             </widget>
